add google analytics, update teachers paths on landing page

--- a/edu/index.html
+++ b/edu/index.html
@@ -291,27 +291,33 @@ Start</span>
                     
                     <!-- page 1 -->
                     <div class="slider_page">
-                        <a class="hasshadow" href="item.html?id=14349" target="_blank">
-                            <img src="images/no-image.gif" alt="thumb" width="90%"/>
+                        <a class="hasshadow" href="http://education.natural-europe.eu/natural_europe/exhibits/show/How-fossils-come-to-existance/to-begin-with" target="_blank">
+                            <img src="images/fossils.png" alt="thumb" width="90%"/>
                         </a>
                         <h2>
-                            <a href="#">requirements missing</a>
+                            <a href="http://education.natural-europe.eu/natural_europe/exhibits/show/How-fossils-come-to-existance/to-begin-with" target="_blank">How fossils came to existence</a>
                         </h2>
-                        <p>
-                        An example item just to feel the mockup
-                        </p>
+                        <p>In this workshop participants learn different possibilities of fossile preservation. In the second part of the workshop they will pour their own "fossils"</p>
                     </div>
                     <!-- page 2 -->
                     <div class="slider_page">
-                        <a class="hasshadow" href="item.html?id=14349" target="_blank">
-                            <img src="images/no-image.gif" alt="thumb" width="90%"/>
+                        <a class="hasshadow" href="http://education.natural-europe.eu/natural_europe/exhibits/show/Are-human-beings-related-to-pt/to-begin-with" target="_blank">
+                            <img src="images/human_ptero.jpg" alt="thumb" width="90%"/>
                         </a>
                         <h2>
-                            <a href="#">requirements missing</a>
+                            <a href="http://education.natural-europe.eu/natural_europe/exhibits/show/Are-human-beings-related-to-pt/to-begin-with" target="_blank">Are human beings related to pterosaurs?</a>
                         </h2>
-                        <p>
-                        An example item just to feel the mockup
-                        </p>
+                        <p>This workshop assists participants in finding out why we human beeings have fibula and tibia and radius and ulna equal as all vertebrates have, too . In the process participants will find and recognize a lot of hints in fossils in our museum showing that phenomenon</p>
+                    </div>
+                    <!-- page 3 -->
+                    <div class="slider_page">
+                        <a class="hasshadow" href="http://education.natural-europe.eu/natural_europe/exhibits/show/Flying_dinosaurs/to-begin-with" target="_blank">
+                            <img src="images/archaeopteryx.jpg" alt="thumb" width="90%"/>
+                        </a>
+                        <h2>
+                            <a href="http://education.natural-europe.eu/natural_europe/exhibits/show/Flying_dinosaurs/to-begin-with" target="_blank">How dinosaurs learnt to fly</a>
+                        </h2>
+                        <p>This workshop assists participants in finding out from which animals the oldest known birds are descended. In this process participants will explore the physical prerequisites for flying. The findings can then be verified at the Jura-Museum’s division on "Himmelsstürmer" (air-bound creatures).</p>
                     </div>
                     
                 </div>
