--- a/edu/listing.html
+++ b/edu/listing.html
@@ -409,7 +409,7 @@ Designed by <a href="http://www.snsb.de/" title="Staatl." target="blank">Staatli
         function customizeFinder() {
             return {
                 /* limit collections|providers*/
-                "selectedProviders":["oeagroasis","oeenoat","oebioagro","oeecologiga","oeintute","oeaua","oeeulsesthonian","oebmlfuwaustrian","oefao","oeellinogermaniki","oeorganiceprints","oespanish","oemiksike","organicedunet","oerafrica","greenoer","aglrnaturebridge","cgiar","ruforum","gfar","aglrgreatschoolgardens","aglrlifelab","nsdlbeyond","sercmicro","aglrencyclopediaoflife"],
+                "selectedProviders":["edujura"],
                 
                 "externalSources": ["wp","scr","ss","gb"],
                 "pageContainers": ['bottom','top'],
