Google analytics + minor changes

--- a/cultural/item.html
+++ b/cultural/item.html
@@ -463,6 +463,17 @@ Designed by <a href="http://www.snsb.de/" title="Staatl." target="blank">Staatli
 </div>
 <script language="javascript" type="text/javascript" src="http://an01118.hp.altmuehlnet.de/templates/Eichstaett/scripts/vm_stuff.js"></script>
 
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-42040521-9']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+         })();
+        </script>
+    
 </body>
 
 </html>
