changes on landing page and fixes

--- a/edu/index.html
+++ b/edu/index.html
@@ -286,7 +286,7 @@ Start</span>
             
             <!--right_sliders-->
             <div class="teacher_paths">
-                <h3>Teacher Pathways</h3>
+                <h3>Latest Pathways</h3>
                 <div class=" is_slider">
                     
                     <!-- page 1 -->
