fixes and changes on UI

--- a/edu/listing.html
+++ b/edu/listing.html
@@ -414,8 +414,7 @@ Designed by <a href="http://www.snsb.de/" title="Staatl." target="blank">Staatli
                 
                 "externalSources": ["wp","scr","ss","gb"],
                 "pageContainers": ['bottom','top'],
-                "facets": ["provider","language","lrt", "context", "iur"], //,"rights" ,"format" "tagr"
-                "limitFacetDisplay": {"language":["en","eng;","eng","eng; eng","el","fr","nl","de","et","hu","ro","tr"]},
+                "facets": ["language","lrt", "context", "iur"], //,"rights" ,"format" "tagr"
                 "maxLengthDescription":  300,
                 "pageSize": 10,
                 "repositoryName": "Organic.Edunet",
