--- a/cultural/listing.html
+++ b/cultural/listing.html
@@ -414,7 +414,7 @@ Designed by <a href="http://www.snsb.de/" title="Staatl." target="blank">Staatli
                 "maxLengthDescription":  300,
                 "pageSize": 6,
                 "repositoryName": "NE_Repo",
-                "serviceUrl":"http://83.212.101.124:8080/NE_Repository_Exp/api/ariadne/restp"
+                "serviceUrl":"http://collections.natural-europe.eu/repository/api/ariadne/restp"
                 
                 
             }
