--- a/_developing/cultural/listing.html
+++ b/_developing/cultural/listing.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="robots" content="index, follow" />
   <meta name="keywords" content="Jura-Museum Eichstätt, Staatliche Naturwissenschaftliche Sammlungen Bayerns" />
   <meta name="description" content="Jura-Museum Eichstätt" />
