--- a/_developing/edu/index.html
+++ b/_developing/edu/index.html
@@ -239,6 +239,11 @@ Start</span>
                 </div>
             </section>
             <!-------------------------------------------------------- end start search-->
+            
+            <div class="link_to_general_finder">
+                <a href="http://greenlearningnetwork.com/natural-europe/educational/index.html">Search all Natural Europe Educational Collections</a>
+            </div>
+            
             <!--left_sliders-->
             <div class="highlighted_paths ">
                 <h3>Highlighted Pathways from other Museums</h3>
