--- a/cultural/index.html
+++ b/cultural/index.html
@@ -229,7 +229,7 @@ Start</span>
                     <div>
                         <form class="form-wrapper cf" action="listing.html" method="get">
                             <div>
-                                <input type="text" name="query" id="query" class="withplaceholder" placeholder="Search..." required>
+                                <input type="text" name="query" id="query" class="withplaceholder" placeholder="Search the Museum" required>
                                     <button type="submit">Search</button>
                                     </div>
                             <!--<input type="submit" value="submit" />-->
@@ -239,6 +239,11 @@ Start</span>
                 </div>
             </section>
             <!-------------------------------------------------------- end start search-->
+            
+            <div class="link_to_general_finder">
+                <a href="http://greenlearningnetwork.com/natural-europe/cultural/index.html">Search all Natural Europe Cultural Collections</a>
+            </div>
+            
             <!--left_sliders-->
             <div class="highlighted_paths ">
                 <h3>Highlighted specimens from other museums</h3>
