--- a/_developing/edu/index.html
+++ b/_developing/edu/index.html
@@ -241,7 +241,7 @@ Start</span>
             <!-------------------------------------------------------- end start search-->
             
             <div class="link_to_general_finder">
-                <a href="http://greenlearningnetwork.com/natural-europe/educational/index.html">Search all Natural Europe Educational Collections</a>
+                <a href="http://greenlearningnetwork.com/natural-europe/educational/index.html"><img src="images/950_all_educational.png"></a>
             </div>
             
             <!--left_sliders-->
